# tiny-cli

./: Cargo.toml  README.md  Readme.md
examples/: simple.rs
src/: input.rs  lib.rs  utf8.rs
